[tool.poetry]
name = "battlemap"
version = "0.1.0"
description = ""
authors = ["Blake blakelehrbass@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"battlemap" = 'battlemap.main:main'